// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GGPLOT accepting ONE valid component 1`] = `
<svg
  height="500"
  width="300"
>
  <g
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="middle"
    transform="translate(0, 490)"
  >
    <path
      class="domain"
      d="M10.5,6V0.5H290.5V6"
      stroke="currentColor"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(10.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(38.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(66.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(94.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(122.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        40
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(150.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        50
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(178.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        60
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(206.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        70
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(234.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        80
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(262.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        90
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(290.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        100
      </text>
    </g>
  </g>
  <g
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="end"
    transform="translate(10, 0)"
  >
    <path
      class="domain"
      d="M-6,490.5H0.5V10.5H-6"
      stroke="currentColor"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0,490.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,442.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,394.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,346.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,298.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        40
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,250.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        50
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,202.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        60
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,154.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        70
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,106.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        80
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,58.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        90
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,10.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        100
      </text>
    </g>
  </g>
  <g>
    <path
      d="M12.8,485.2L290,10"
      fill="none"
      stroke="crimson"
      stroke-width="1"
    />
  </g>
</svg>
`;

exports[`GGPLOT accepting ONE valid component 2`] = `
<svg
  height="500"
  width="300"
>
  <g
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="middle"
    transform="translate(0, 490)"
  >
    <path
      class="domain"
      d="M10.5,6V0.5H290.5V6"
      stroke="currentColor"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(10.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(38.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(66.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(94.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(122.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        40
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(150.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        50
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(178.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        60
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(206.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        70
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(234.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        80
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(262.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        90
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(290.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        100
      </text>
    </g>
  </g>
  <g
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="end"
    transform="translate(10, 0)"
  >
    <path
      class="domain"
      d="M-6,490.5H0.5V10.5H-6"
      stroke="currentColor"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0,490.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,442.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,394.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,346.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,298.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        40
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,250.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        50
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,202.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        60
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,154.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        70
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,106.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        80
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,58.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        90
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,10.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        100
      </text>
    </g>
  </g>
  <g>
    <circle
      cx="12.8"
      cy="485.2"
      fill="orange"
      r="3"
    />
    <circle
      cx="290"
      cy="10"
      fill="orange"
      r="3"
    />
  </g>
</svg>
`;

exports[`Passing no child into GGPLOT should work just fine and render only the XAxis and YAxis 1`] = `
<svg
  height="500"
  width="300"
>
  <g
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="middle"
    transform="translate(0, 490)"
  >
    <path
      class="domain"
      d="M10.5,6V0.5H290.5V6"
      stroke="currentColor"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(10.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(38.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(66.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(94.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(122.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        40
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(150.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        50
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(178.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        60
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(206.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        70
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(234.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        80
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(262.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        90
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(290.5,0)"
    >
      <line
        stroke="currentColor"
        y2="6"
      />
      <text
        dy="0.71em"
        fill="currentColor"
        y="9"
      >
        100
      </text>
    </g>
  </g>
  <g
    fill="none"
    font-family="sans-serif"
    font-size="10"
    text-anchor="end"
    transform="translate(10, 0)"
  >
    <path
      class="domain"
      d="M-6,490.5H0.5V10.5H-6"
      stroke="currentColor"
    />
    <g
      class="tick"
      opacity="1"
      transform="translate(0,490.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        0
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,442.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        10
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,394.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        20
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,346.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        30
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,298.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        40
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,250.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        50
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,202.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        60
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,154.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        70
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,106.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        80
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,58.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        90
      </text>
    </g>
    <g
      class="tick"
      opacity="1"
      transform="translate(0,10.5)"
    >
      <line
        stroke="currentColor"
        x2="-6"
      />
      <text
        dy="0.32em"
        fill="currentColor"
        x="-9"
      >
        100
      </text>
    </g>
  </g>
</svg>
`;
